--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -14,4 +14,4 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm test
-      - run: npm run build
+      ##- run: npm run build
